<resources>
    <string name="columnsSelected">%1$s selected(s)</string>
    <string name="removeColumnsMessage">Select column for remove</string>
    <string name="sortColumnsMessage">Long press for drag&amp;drop your column</string>
    <string name="addColumnUser">Add %1$s\'s column</string>
    <string name="addTrendingTopic">Add Trending Topics column</string>
    <string name="addSavedTweet">Add Saved Tweet column</string>
    <string name="sortColumns">Sort columns</string>
    <string name="removeColumns">Remove columns</string>
    <string name="newList">New List</string>
    <string name="title">Title</string>
    <string name="isPublic">Is public?</string>
    <string name="included_list_message">The user has been included in the list</string>
    <string name="created_list_message">List has been included successfully</string>
    <string name="buyKey">Buy key</string>
    <string name="buyKeyMessage">You can\'t do this action. If you need it, you can buy a key in Google Play and you\'ll get this and other features</string>
    <string name="mentioned">Mention</string>
    <string name="redirecting">Redirecting</string>
    <string name="counterSearches">%1$s messages in all searches</string>
    <string name="counterSearch">%1$s messages in search %2$s</string>
    <string name="timelineFrom">Wrote on your timeline %1$s</string>
    <string name="mentionFrom">Have been mentioned by %1$s</string>
    <string name="dmFrom">You received a DM of %1$s</string>
    <string name="messageTo">%1$s message</string>
    <string name="messagesTo">%1$s messages to %2$s</string>
    <string name="select_icon">Select icon</string>
    <string name="shouldSelectOneUser">You should select one user</string>
    <string name="hide">Hide</string>
    <string name="view_photo_profile">View photo profile</string>
    <string name="included_list">Included in list</string>
    <string name="user_no_web">User haven\'t web</string>
    <string name="highlight">Highlight</string>
    <string name="column_main_message">%1$s is main now</string>
    <string name="main">Main</string>
    <string name="info_user_counters">%1$s tweets | %2$s followers | %3$s friends</string>
    <string name="column_delete_ok">Column deleted</string>
    <string name="column_delete">Are you sure you want to delete this column?</string>
    <string name="column_created">Created column %1$s</string>
    <string name="column_exists">The column has already created: %1$s</string>
    <string name="column_no_found">Column no found: %1$s</string>
    <string name="create_columns">Create columns</string>
    <string name="retry">Retry</string>
    <string name="updating">Updating</string>
    <string name="my_activity">My activity</string>
    <string name="dms">DMs</string>
    <string name="title_my_tweets">My retweeted</string>
    <string name="title_my_retweets">Retweets</string>
    <string name="title_retweet_others">Retweets</string>
    <string name="searches">Searches</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Followings</string>
    <string name="title_saved_tweets">Saved tweets</string>
    <string name="title_saved_images">Images</string>
    <string name="title_saved_links">Links</string>
    <string name="trending_topics_back">Return to trending topics</string>
    <string name="translate_default_language_text">Set language as default</string>
    <string name="default_language_setting_message">Language has been set as default. If you want to select other language, you must long-press the translate button</string>
    <string name="original_tweet">Original Tweet</string>
    <string name="location_search_message">Enter a location</string>
    <string name="volume_control_search_user">Username</string>
    <string name="volume_control_search_user_msg">The username you wish to search</string>
    <string name="volume_control_search_word">Word</string>
    <string name="volume_control_search_word_msg">The word you wish to search</string>
    <string name="update">Update</string>
    <string name="user_list_get_message">There is no information about the user lists in the system. Would you like to check if there is some information on the server? This task may take some time</string>
    <string name="user_list_update_message">Would you like to update the user lists with the info existing on the server? This task may take some time</string>
    <string name="volume_control">Volume control</string>
    <string name="show_retweeters">Show retweeters</string>
    <string name="txt_retweeters_title">Users who have retweeted</string>
    <string name="no_retweeters">This tweet has not been retweeted</string>
    <string name="is_twitlonger_msg">The message contains more of 140 characters. You has the next options for send it</string>
    <string name="title_prf_max_download">Number of tweets to download</string>
    <string name="summary_prf_max_download">Number of tweets that are downloaded to each call to Twitter in Timeline</string>
    <string name="verify_dm_title">Loading user</string>
    <string name="verify_dm_msg">Checking if you can send direct message</string>
    <string name="verify_dm_yes">Send direct message to %1$s</string>
    <string name="verify_dm_no">Can not send message to this user</string>
    <string name="update_avatar_loading">Refreshing avatar...</string>
    <string name="change_avatar_loading">Changing avatar...</string>
    <string name="change_avatar_correct">Avatar changed successfully</string>
    <string name="change_avatar_no_correct">There was an error when changing the avatar. Please try again later</string>
    <string name="load_conversation">Load list</string>
    <string name="rate_app_title">Rate our app!</string>
    <string name="rate_app">Rate</string>
	<string name="title_crash">Crash</string>
    <string name="msg_crash">There was a crash. Do you want to send the mail log to the developer can fix it?</string>
	<string name="other_gallery">Problems capturing the image. Use another gallery if possible</string>
	<string name="no_facebook_images">You can not send pictures if the message is unique to Facebook</string>
	<string name="no_twitlonger_msg">Only if text is greater than 140 characters</string>
	<string name="twitlonger_msg">The message will sent Twitlonger in Twitter</string>
	<string name="n_tweets_msg">%1$s messages will be sent to the Twitter network</string>
	<string name="twitlonger">Twitlonger</string>
	<string name="n_tweets">N tweets</string>
	<string name="why_buy">Why buy it?</string>
	<string name="buy_pro">Buy PRO</string>
	<string name="first_twitter_user">The first user must be the Twitter network</string>
	<string name="add_twitter">Add Twitter</string>
	<string name="add_facebook">Add Facebook</string>
	<string name="select_network">Select a network</string>
	<string name="facebook_network">Facebook (write only)</string>
	<string name="twitter_network">Twitter</string>
	<string name="one_user_selected">You must have a user selected</string>
	<string name="msg_lite_user_new_status">You can add more users of Twitter and Facebook purchasing the PRO version</string>
	<string name="export_html_title">Creating HTML</string>
	<string name="export_html_description">This process can take time</string>
	<string name="export_html">Share as HTML</string>
	<string name="personalize">Personalize</string>
	<string name="options">Options</string>
	<string name="name_widget_tweets_4x2">TweetTopics Tweets 4x2</string>
	<string name="name_widget_counter_4x1">TweetTopics Counter 4x1</string>
    <string name="name_widget_counter_2x1">TweetTopics Counter 2x1</string>
	<string name="out_app">You may need to exit the application and re-enter</string>
    <string name="title_prf_use_pulltorefresh">Pull to refresh (beta)</string>
    <string name="summary_prf_use_pulltorefresh">Using "Pull to refresh" to update the list of tweets</string>
    <string name="title_prf_time_notifications_mentions_dm">Interval mentions and DMs</string>
    <string name="summary_prf_time_notifications_mentions_dm">Specifies a shorter time and you can receive notifications before of mentions and DMs</string>
	<string name="title_color_tweet_no_read">Tweet unread</string>
	<string name="desc_color_tweet_no_read">Color of the lateral line to highlight the unread tweet</string>
    <string name="title_prf_use_no_read">Highlight unread</string>
    <string name="summary_prf_use_no_read">Use sideline to highlight unread tweets</string>
	<string name="editing_title">Editing</string>
	<string name="editing_description">Modifying user information</string>
	<string name="info_save">Information stored correctly</string>
	<string name="edit_user">Edit user</string>
	<string name="biography">Biography</string>
	<string name="location">Location</string>
	<string name="bottom_list">Bottom</string>
	<string name="my_tweets">Your tweets, retweeted</string>
	<string name="my_retweets">Retweets by you</string>
	<string name="retweet_others">Retweets by others</string>
	<string name="my_lists">My lists</string>
	<string name="list_follow_me">Lists following me</string>
	<string name="sent_to">Sent to</string>
	<string name="menu">Main menu</string>
	<string name="txt_more">More</string>
	<string name="displace">Displace</string>
	<string name="title_prf_show_links">Show URLs</string>
	<string name="summary_prf_show_links">How to display the URLs of the links in tweets</string>
	<string name="title_prf_date_format">Date format</string>
	<string name="summary_prf_date_format">Format in which dates are displayed in the list of tweets</string>
	<string name="no_conversation">It is not a conversation</string>
	<string name="back_to_menu">Back to menu</string>
    <string name="loading">Loading</string>
    <string name="view_conversation">Show all</string>
    <string name="counter">Counter</string>
    <string name="address">Address</string>
    <string name="photo">Photo</string>
    <string name="text">Text</string>
    <string name="send_dm_to">Send direct message to</string>
    <string name="username">Username</string>
    <string name="name_and_icon">Name and icon</string>
    <string name="cancel">Cancel</string>
    <string name="how_notifications">How it works</string>
    <string name="search_words">Search</string>
    <string name="search_words_user">Filter by user</string>
    <string name="search_words_and">Words that must appear</string>
    <string name="search_words_and_short">(Yes)</string>
    <string name="search_words_or">Words that may appear</string>
    <string name="search_words_or_short">(May)</string>
    <string name="search_words_not">Words that I don\'t want</string>
    <string name="search_words_not_short">(No)</string>
    <string name="search_from_user">Tweets from this user</string>
    <string name="search_from_user_short">(Tweets)</string>
    <string name="search_to_user">Replies to this user</string>
    <string name="search_to_user_short">(Replies)</string>
    <string name="search_source">Just one application of Twitter</string>
    <string name="search_source_short">Source</string>
    <string name="languages">Languages</string>
    <string name="attitude">Attitude</string>
    <string name="filter">Filter</string>
    <string name="no_retweet">Do not show retweets</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="use_geo">Using geolocation</string>
    <string name="use_geo_gps">Get GPS position</string>
    <string name="use_geo_map">Find location on map</string>
    <string name="position">Position</string>
    <string name="miles">Miles</string>
    <string name="km">Km</string>
    <string name="distance">Distance</string>
    <string name="notifications">Using notifications</string>
    <string name="notifications_bar">Use Android notifications bar</string>
</resources>