<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip"
    >
    
	<ScrollView
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="1"> 
		
		<LinearLayout
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:layout_width="fill_parent">
	
			<LinearLayout android:orientation="horizontal" android:id="@+id/LinearLayout02" android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<TextView android:text="@string/name" 
					android:layout_marginRight="5dip"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				<EditText android:text="" 
					android:layout_marginLeft="5dip"
					android:id="@+id/quick_name" 
					android:layout_weight="1"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
			</LinearLayout>
				
			<TextView android:text="@string/text" 
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					
			<LinearLayout android:orientation="horizontal" android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:padding="5dip" android:layout_height="wrap_content">
				<Button android:layout_width="wrap_content" android:text="@string/counter" android:layout_height="wrap_content" android:id="@+id/bt_quick_count"></Button>
				<Button android:layout_width="wrap_content" android:text="@string/address" android:layout_height="wrap_content" android:id="@+id/bt_quick_address"></Button>
				<Button android:layout_width="wrap_content" android:text="@string/photo" android:layout_height="wrap_content" android:id="@+id/bt_quick_photo"></Button>
				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:layout_weight="1" 
					android:gravity="right" android:id="@+id/count_chars" 
					android:text="0/140" style="@style/CountChars"></TextView>
			</LinearLayout>
			
			<EditText android:lines="4" android:text="" android:layout_width="fill_parent" 
					android:id="@+id/quick_text" android:layout_height="wrap_content"
					android:gravity="top"></EditText>
			
			<LinearLayout
				android:layout_marginTop="10dip"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_width="fill_parent">
				
				<CheckBox android:layout_weight="1" 
					android:text="@string/send_dm_to" 
					android:id="@+id/cb_direct" 
					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
					
				<EditText android:text="" 
					android:layout_marginLeft="25dip"
					android:id="@+id/quick_direct" 
					android:hint="@string/username"
					android:enabled="false"
					android:layout_weight="1"
					android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
				
			</LinearLayout>

		</LinearLayout>
		
	</ScrollView>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="60dip"
		android:background="#dddddd"
		>
       <Button android:layout_margin="8dip"
       		android:text="@string/save" 
       		android:id="@+id/bt_save" 
       		android:layout_width="fill_parent" 
       		android:layout_height="fill_parent"
       		android:layout_weight="1"></Button>    
       <Button android:layout_margin="8dip"
       		android:text="@string/cancel" 
       		android:id="@+id/bt_cancel" 
       		android:layout_width="fill_parent" 
       		android:layout_height="fill_parent"
       		android:layout_weight="1"></Button>  
	        
	</LinearLayout>
	
</LinearLayout>
