<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/layout_foot"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:orientation="vertical">

      <LinearLayout
          android:id="@+id/load_progress"
          android:gravity="center"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dip"
          android:layout_width="fill_parent"
          android:orientation="horizontal">
          <ProgressBar
              android:indeterminate="true"
              android:layout_height="16sp"
              android:layout_width="16sp"/>
          <TextView
              android:layout_height="wrap_content"
              android:layout_margin="12dip"
              android:layout_width="wrap_content"
              android:text="@string/loading" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/buttons_foot"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:layout_width="fill_parent"
          android:orientation="horizontal"
          android:padding="5dip">

          <Button
              android:id="@+id/bt_view_conversation"
              android:layout_height="wrap_content"
              android:layout_marginRight="3dip"
              android:layout_weight="1"
              android:layout_width="fill_parent"
              android:text="@string/view_conversation" />

          <Button
              android:id="@+id/bt_load_conversation"
              android:layout_height="wrap_content"
              android:layout_marginRight="3dip"
              android:layout_weight="1"
              android:layout_width="fill_parent"
              android:text="@string/load_conversation" />

          <Button
              android:id="@+id/bt_back_to_menu"
              android:layout_height="wrap_content"
              android:layout_marginLeft="3dip"
              android:layout_weight="1"
              android:layout_width="fill_parent"
              android:text="@string/back_to_menu" />
      </LinearLayout>
</LinearLayout>
